# Notor

./: .gitignore  next.config.js  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: audit.yml  cb-release.yml  general.yml  release.yml
src/: AppProviders.tsx
src-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
src-server/configuration/: base.yaml
src-server/src/: configuration.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  autostart.rs  lib.rs  main.rs  types.rs  utils.rs
src-tauri/src/server/: mod.rs  types.rs  utils.rs
src-tauri/src/server/handlers/: controllers.rs
src/app/: globals.css  home.tsx  layout.tsx  page.tsx
src/app/alert/: page.tsx
src/app/api/auth/: route.ts
src/app/api/signin/: route.ts
src/app/auth/: page.tsx
src/app/auth/api/: route.ts
src/app/signin/: layout.tsx  page.tsx
src/components/icons/: icons.tsx
src/components/ui/: Calendars.tsx  CustomTray.tsx
src/context/: EventsProvider.tsx
src/lib/: Scheduler.ts  config.ts  customEvents.ts
src/services/api/: auth.ts  googleCalendar.ts  index.ts  tags.ts
src/slices/: alert.ts  authSlice.ts  calendars.ts  hooks.ts
src/store/: accessors.ts  store.ts
src/types/: account.ts  lib.d.ts
