[package]
name = "src-server"
version = "0.1.0"
edition = "2021"
authors = ["Shadrach Temitayo @shadrach-tayo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
url = "2"
http = "1"
serde = "1.0.195"
serde_json = "1.0.111"
serde_derive = "1.0.195"
base64 = "0.21.5"
oauth2 = "4"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
dotenv = "0.15.0"
actix-cors = "0.6"
thiserror = "1"
lazy_static = "1"