[package]
name = "src-server"
version = "0.1.0"
edition = "2021"
authors = ["Shadrach Temitayo @shadrach-tayo"]

[[bin]]
path = "src/main.rs"
name = "notor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
url = "2"
http = "1"
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
serde-aux = "4.5.0"
serde_derive = "1.0.195"
base64 = "0.21.5"
oauth2 = "4"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
dotenv = "0.15.0"
actix-cors = "0.6"
thiserror = "1"
lazy_static = "1"
yup-oauth2 = "8"
config = "0.14.0"