[package]
name = "app"
version = "0.1.0"
description = "A Productivity App"
authors = ["shadrach-tayo"]
license = ""
repository = "https://github.com/shadrach-tayo/Notor"
default-run = "app"
edition = "2021"
rust-version = "1.60"

[[bin]]
path = "src/main.rs"
name = "app"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.5.1"
time = "0.3.31"
actix-cors = "0.7.0"
yup-oauth2 = "8"
google-calendar = "0.7.0"
tokio = "1"
oauth2 = "4"
chrono = "0.4.31"
chrono-humanize = "0.2.3"
reqwest = "0.11.23"
chrono-tz = "0.8.6"
auto-launch = "0.5.0"
anyhow = "1.0.80"
iana-time-zone = "0.1.60"
#fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[dependencies.tauri]
version = "1.6.1"
# todo: remove "devtools" in release builds
features = [ "window-set-fullscreen", "notification-all", "shell-open", "system-tray", "devtools"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
